<resources>
    <string name="app_name">Fifa Team Picker</string>
    <string name="rerollPlayersButton">Reroll Controllers</string>
    <string name="rerollTeamsButton">Reroll Teams</string>
    <string name="wcFilterButton">World Cup</string>
    <string name="intFilterButton">Nations</string>
    <string name="wmnFilterButton">Women</string>
    <string name="vsLabel">X</string>
    <string name="wc_iceland_label">Iceland</string>
    <string name="wc_peru_label">Peru</string>
    <string name="regFilterButton">Regular</string>
    <string name="player1Label">Player 1</string>
    <string name="player2Label">Player 2</string>
    <string name="player3Label">Player 3</string>
    <string name="player4Label">Player 4</string>
    <string name="homeTeamNameLabel">Home Team Name</string>
    <string name="homeTeamAttackLabel">Home Team Attack Rating</string>
    <string name="homeTeamMidfieldLabel">Home Team Midfield Rating</string>
    <string name="homeTeamDefenseLabel">Home Team Defense Rating</string>
    <string name="homeTeamOverall">Home Team Overall Rating</string>
    <string name="homeTeamLeague">Home Team League</string>
    <string name="homeTeamCountry">Home Team Country of Origin</string>
    <string name="awayTeamNameLabel">Away Team Name</string>
    <string name="awayTeamAttackLabel">Away Team Attack Rating</string>
    <string name="awayTeamMidfieldLabel">Away Team Midfield Rating</string>
    <string name="awayTeamDefenseLabel">Away Team Defense Rating</string>
    <string name="awayTeamOverall">Away Team Overall Rating</string>
    <string name="awayTeamLeague">Away Team League</string>
    <string name="awayTeamCountry">Away Team Country of Origin</string>
    <string name="attackLabel">Attack:</string>
    <string name="midfieldLabel">Midfield:</string>
    <string name="defenseLabel">Defense:</string>
    <string name="overallLabel">Overall:</string>
    <string name="leagueLabel">League:</string>
    <string name="countryLabel">Country:</string>
    <string name="gameRating">Game Rating</string>
    <string name="teamsTypeLabel">Type of the Teams</string>
</resources>
